--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -210,9 +210,10 @@ to multiple arguments enclosed in square brackets:
 The list is evaluated lazily by default, so instead of using a C<while>
 to read a file a line at a time as you would in Perl 5:
 
-    while my $line = <$*IN> {...}
+    while (my $line = <STDIN>) {...}
 
-in Perl 6 you should use a C<for> instead:
+in Perl 6 you should use a C<for> (plus a unary C<=> "iterate the
+iterator" operator) instead:
 
     for =$*IN -> $line {...}
 
