* podchecking all the S*.
git-svn-id: http://svn.pugscode.org/pugs@23276 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1123,7 +1123,7 @@ C<$()> is a shorthand for C<$/.()> or C<$/()>.  The result object
 may be of any type, not just a string.
 
 You may also capture a subset of the match as the result object using
-the C<< <(...)> construct:
+the C<< <(...)> >> construct:
 
     "foo123bar" ~~ / foo <( \d+ )> bar /
     say $();    # says 123
