* S12: private methods are no longer .:meth, but !meth.
git-svn-id: http://svn.pugscode.org/pugs@23280 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -552,7 +552,7 @@ treating the method call as a postfix:
     @object».*meth(@args)  # calls all methods (0 or more) on each
     @object».+meth(@args)  # calls all methods (1 or more) on each
     @object».=meth(@args)  # calls mutator method on each
-    @object».:meth(@args)  # calls private method on each
+    @object»!meth(@args)   # calls private method on each
 
 Hyperoperators treat a junction as a scalar value, so saying:
 
