--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 23 Feb 2006
+  Last Modified: 17 Mar 2006
   Number: 11
-  Version: 9
+  Version: 10
 
 =head1 Overview
 
@@ -88,6 +88,8 @@ Declarations marked as C<is export> are bound into the C<EXPORT> inner
 modules, with their tagsets as inner module names within it.  For example,
 the C<sub bar> above will bind as C<&Foo::EXPORT::DEFAULT::bar>,
 C<&Foo::EXPORT::ALL::bar>, and C<&Foo::EXPORT::others::bar>.
+
+Tagset names consisting entirely of capitals are reserved for Perl.
 
 Inner modules automatically add their export list to modules in all their
 outer scopes:
@@ -239,18 +241,30 @@ which is short for:
 
     use Perl-6;
 
-you're asking for any version of Perl 6.  Say:
+you're asking for any version of Perl 6.  You need to say:
 
     use Perl-6.0;
     use Perl-6.0.0;
     use Perl-6.2.7.1;
 
 if you want to lock in a particular set of semantics at some greater
-degree of specificity.  And some large company ever forks Perl, you can say
+degree of specificity.  And if some large company ever forks Perl, you can say
 
     use Perl-6-cpan:TPF
 
 to guarantee that you get the unembraced Perl.  C<:-)>
+
+Perl is the default module name, so
+
+    use v6-cpan:TPF;
+
+means the same thing.  As a variant of that, the current Perl 5
+incantation to switch to Perl 6 parsing is
+
+    use v6-pugs;
+
+(though in Perl 5 this actually ends up calling the v6.pm module with a
+'-pugs' argument for insane-but-useful reasons.)
 
 For wildcards any valid smartmatch selector works:
 
@@ -273,7 +287,7 @@ and it knows (even if you don't) that you mean
 
     my Dog-1.3.4-cpan:JRANDOM $spot .= new("woof");
 
-The use statement actually allows a language on the front of a module name,
+The C<use> statement actually allows a language on the front of a module name,
 so that you can use modules from other languages.  The language is separated
 by a colon.  For instance:
 
@@ -314,3 +328,7 @@ it runs Perl 6 in "lax" mode, without strictures or warnings, since obviously
 a bare literal in a void context I<ought> to have produced a warning.
 (Invoking perl with C<-e6> has the same effect.)
 
+It's not necessary to force Perl 6 if the interpreter or command
+specified already implies it, such as use of a "C<#!/usr/bin/perl6>"
+shebang line.  Nor is it necessary to force Perl 6 in any file that
+beings with the "class" or "module" keywords.
